<resources>
    <string name="app_name">结伴同游</string>

    <!-- 登陆页面 -->
    <string name="hint_username">请输入手机号码</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="login_title">登陆</string>
    <string name="login">登陆</string>
    <string name="loginWX">微信登陆</string>
    <string name="register">注册</string>
    <string name="login_welcome">Welcome Back,</string>
    <string name="login_welcome_login">Sign in to continue</string>
    <string name="login_no_account">没有账号？立即注册</string>
    <string name="register_welcome">Hey, Welcome you.</string>
    <string name="hint_nickname">给自己取一个昵称</string>

    <!-- post页面 -->
    <string name="hint_post_title">写个标题吧</string>
    <string name="hint_post_content">说点什么吧（别忘了留个联系方式）</string>
    <string name="hint_post_des">想去的地儿</string>
    <string name="hint_post_dep">出发的地儿</string>
    <string name="post_title">发布行程</string>
    <string name="post_startDateS">出发时间:%1$s</string>
    <string name="post_startDate">出发时间:</string>

    <string name="share">分享</string>
    <string name="view_more">查看详情</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="splash">源于热爱，所以相聚</string>
    <string name="post_item_title">一位%1$s的%2$s邀请你一起去%3$s玩儿啦。</string>
    <string name="nick_man">小哥哥</string>
    <string name="nick_man_adj">帅气</string>
    <string name="nick_woman">小姐姐</string>
    <string name="nick_woman_adj">漂亮</string>

    <string name="detail_apply">联系我</string>
    <string name="detail_tv_des">目的地点 %1$s</string>
    <string name="detail_tv_dep">出发地点 %1$s</string>
    <string name="detail_tv_startData">出发时间 %1$s</string>
    <string name="detail_participant">参与者</string>
    <string name="sorry">参与者和评论功能正在开发中…</string>
    <string name="t_post_list_to_detail">ivDetailPhoto</string>
    <string name="detail_comment">留言墙</string>
    <string name="detail_comment_tv">点我查看全部留言</string>
    <string name="detail_commit_edit_hint">说点儿什么…</string>
    <string name="comment_ruler">聊天小贴士:\n 1.上滑就能看到输入框啦\n 2.请注意辨别虚假信息</string>

    <string name="picker_done">%1$d / %2$d</string>
    <string name="splash_author">壁纸来源：@藏地情人</string>

    <string name="nav_post">行程广场</string>
    <string name="nav_fav">私人收藏</string>
    <string name="nav_chat">私聊</string>
</resources>
