<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/base_toolbar" />

    <ImageView
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp80"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp50"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp50">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edit_account"
            style="@style/loginEdit"
            android:hint="@string/hint_username"
            android:inputType="number"
            android:maxLength="11" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edit_pwd"
            style="@style/loginEdit"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn_account"
        style="@style/loginButton"
        android:layout_marginTop="@dimen/dp50"
        android:text="@string/login" />

    <Button
        style="@style/loginButton"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/loginWX" />

    <Button
        style="@style/loginButton"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/register" />
</LinearLayout>