<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PostDetailAct">


    <!--<ImageView
        android:id="@+id/detail_photos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:transitionName="@string/t_post_list_to_detail"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.6"
        tools:ignore="ContentDescription" />-->


    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <!-- 用户信息 -->
            <com.colin.ctravel.widget.MyViewPager
                android:id="@+id/detail_vp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp16">

                <ImageView
                    android:id="@+id/detail_user_head"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/logo" />

                <TextView
                    android:id="@+id/detail_user_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_toEndOf="@id/detail_user_head"
                    android:textSize="@dimen/font_size_14"
                    tools:text="藏地情人" />

                <Button
                    android:id="@+id/detail_btn_apply"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginStart="@dimen/dp100"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_toEndOf="@id/detail_user_nickname"
                    android:background="@drawable/ripple_btn"
                    android:text="@string/detail_apply"
                    android:textColor="@color/withe"
                    android:textSize="@dimen/font_size_16" />

                <!-- 行程信息 -->
                <TextView
                    android:id="@+id/detail_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_user_head"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_19"
                    tools:text="我是标题" />

                <TextView
                    android:id="@+id/detail_info_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_info_title"
                    android:layout_marginTop="@dimen/dp10"
                    android:textSize="@dimen/font_size_16"
                    tools:text="一起我爱的发声阿斯蒂芬阿斯蒂芬阿斯蒂芬阿斯蒂芬阿
斯蒂芬阿斯蒂芬阿斯蒂芬阿斯蒂芬阿斯蒂芬阿斯蒂芬阿斯蒂芬" />

                <TextView
                    android:id="@+id/detail_info_data"
                    style="@style/detailInfoText"
                    android:layout_below="@id/detail_info_content"
                    android:drawableStart="@drawable/icon_date" />

                <TextView
                    android:id="@+id/detail_info_dep"
                    style="@style/detailInfoText"
                    android:layout_below="@id/detail_info_data"
                    android:drawableStart="@drawable/icon_location" />

                <TextView
                    android:id="@+id/detail_info_des"
                    style="@style/detailInfoText"
                    android:layout_below="@id/detail_info_dep"
                    android:drawableStart="@drawable/icon_location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_info_des"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/detail_participant"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp200"
                    android:layout_below="@id/detail_info_des"
                    android:layout_marginTop="@dimen/dp50"
                    android:text="@string/sorry" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>